# MiroThinker

./: .env.example  pyproject.toml
apps/adk-agent/: .env.example  README.md  main.py  pyproject.toml  server.py
apps/adk-agent/adk_web_agents/mirothinker/: __init__.py
apps/adk-agent/agents/: browsing.py  executor.py  loop_synthesiser.py  maestro.py  model_config.py  pipeline.py  research.py  researcher.py  summary.py  synthesiser.py  thinker.py  web_agent.py
apps/adk-agent/aspects/: __init__.py  corpus_refresh.py  cost_tracking.py  duckdb_safety.py  error_escalation.py  health_gate.py  heartbeat.py  io_validation.py  output_quality.py  timing.py
apps/adk-agent/blocks/: __init__.py  maestro_block.py  scout_block.py  search_executor_block.py  swarm_block.py  synthesiser_block.py  thinker_block.py
apps/adk-agent/callbacks/: after_model.py  after_tool.py  before_model.py  before_tool.py  block_adapter.py  condition_manager.py  thinker_escalate.py
apps/adk-agent/dashboard/: __init__.py  collector.py  event_store.py  html_report.py  models.py  registry.py  server.py  sse.py
apps/adk-agent/dashboard/static/css/: dashboard.css
apps/adk-agent/dashboard/static/js/: app.js
apps/adk-agent/dashboard/templates/: index.html
apps/adk-agent/frontend/: next.config.ts  package-lock.json  package.json
apps/adk-agent/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/adk-agent/models/: atomic_condition.py  block_maintainer.py  convergence.py  corpus_store.py  errors.py  pipeline_block.py  pipeline_health.py  pipeline_state.py  quality_manifest.py
apps/adk-agent/plugins/: __init__.py
apps/adk-agent/prompts/: __init__.py  templates.py
apps/adk-agent/tools/: corpus_sql.py  cost_tracker.py  deep_research_tools.py  discovery_store.py  knowledge_graph.py  mcp_tools.py  pipeline_diagnostic.py  research_tools.py  scout.py  search_executor.py  swarm_thinkers.py
apps/adk-agent/utils/: boxed.py  flock_proxy.py  input_handler.py  query_key.py
apps/strands-agent/: .env.example  MANIFEST.md  README.md  agent.py  async_http.py  atomizer.py  book_pipeline.py  cache.py  comprehension.py  config.py  corpus.py  corpus_tools.py  datalake.py  document_tools.py  extraction.py  forum_tools.py  government_tools.py  integrity_tools.py  jobs.py  knowledge_recall_tools.py  knowledge_store.py  knowledge_tools.py  langchain_researcher.py  langchain_tools.py  main.py  mcp_configs.py  model_selector.py  orchestrator.py  orchestrator_langchain.py  orchestrator_protocol.py  osint_tools.py  preprint_tools.py  prompts.py  pyproject.toml  swarm_bridge.py  task_pool.py  task_tools.py  tools.py  youtube_tools.py
apps/strands-agent/evals/: Makefile  __init__.py  conftest.py  eval_collector.py  mock_model.py  test_agent_metrics.py  test_hooks_eval.py  test_integ_agent.py  test_integ_llm_judge.py  test_plugin_integration.py  test_session.py
apps/strands-agent/plugins/: __init__.py  adaptive.py  budget.py  domains.py  knowledge.py  lineage.py  tool_audit.py  tool_router.py
apps/strands-agent/skills/osint-censored-discovery/: SKILL.md
apps/strands-agent/skills/youtube-research/: SKILL.md
apps/strands-agent/tests/: test_knowledge_plugin.py  test_knowledge_store.py  test_tool_audit.py  test_tool_router.py
apps/strands-agent/universal_store/: config.py  dashboard.py  entrypoint.py  protocols.py  scheduler.py  schema.py  store.py  trace.py
apps/strands-agent/universal_store/actors/: __init__.py  base.py  bootstrap.py  curation.py  flock.py  flock_adapter.py  mcp.py  orchestrator.py  reflexion.py  semantic.py  sources.py  supervisor.py  swarm.py  swarm_adapter.py  sync.py  user.py
apps/strands-agent/universal_store/corpus/: battery.py
apps/strands-agent/universal_store/queries/: engine.py
apps/strands-agent/universal_store/rules/: engine.py
apps/strands-agent/universal_store/tests/: fixtures.py  test_universal_loop.py
docs/: ARCHITECTURE.md  (+25 more)
(+262 files in other folders)
