[project]
name = "mirothinker-adk"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=1.0.0",
    "miroflow-tools>=0.1.0",
    "python-dotenv",
    "litellm",
    "aiosqlite",
    "ag-ui-adk>=0.5.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "duckdb>=1.0.0",
]

[tool.uv.sources]
miroflow-tools = { path = "../../libs/miroflow-tools", editable = true }
